# AudioRenderingV2

./: .gitignore  AudioRenderer.cpp  AudioRenderer.h  AudioRendering.sln  CUDABuffer.h  Camera.cpp  EBO.h  LaunchParams.h  Main.cpp  OBJ_Loader.h  OptixModel.cpp  OptixModel.h  PRD.h  README.md  RtAudio.h  VBO.h  config.json  convolute.cpp  default.frag  default.vert  devicePrograms.cu  raytracer.sln  raytracer.vcxproj  raytracer.vcxproj.filters  shaderClass.h  test.mtl
AudioRendering/: 1D.xml  4D.xml  AppModes.h  AudioFile.h  AudioFileRenderer.h  AudioRenderer.cpp  AudioRenderer.h  AudioRendering.vcxproj  AudioRendering.vcxproj.filters  AudioRenderingUtils.cpp  AudioRenderingUtils.h  Camera.cpp  Camera.h  CircularBuffer.h  Halton.cpp  Halton.h  Mesh.cpp  Mesh.h  OBJLoader.cpp  OBJLoader.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  ShaderProgram.cpp  Source.cpp  Source.h  Utils.h  main.cpp  rs.txt  thread_pool.hpp
AudioRendering/matlab/: analisis1D.m  analisis2D.m  analisis3D.m  cuantanalisis1D.m  cuantanalisis2D.m  cuantanalisis3D.m  data1D.m  data2D.m  data3D.m  distranalisis1D.m  distranalisis2D.m  distranalisis3D.m
Libraries/lib/: rtaudio.lib
assets/models/: caja.mtl  cajaAbierta.mtl  cajaConToro.mtl  conference_realsize.mtl  giantSphere.mtl  materials.xml  planaso.mtl  planaso2.mtl  (+2 more)
doc/: informe.tex  prgrado.cls  referencias.bib
models/: sphere.mtl
optix/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main_old.cpp  optix.sln  optix7course.sln
prebuild/: CMakeLists.txt
prebuild/obj_raytracer/: AudioFile.h  AudioRenderer.cpp  AudioRenderer.h  CMakeLists.txt  Camera.cpp  Camera.h  CircularBuffer.h  Context.cpp  Context.h  EBO.cpp  EBO.h  Experimentation.cpp  Experimentation.h  HalfSphere.cpp  HalfSphere.h  LaunchParams.h  Mesh.cpp  Mesh.h  OBJ_Loader.h  OptixModel.cpp  OptixModel.h  PRD.h  RtAudio.h  Sphere.cpp  Sphere.h  Utils.cpp  Utils.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  cJSON.c  cJSON.h  cmake_install.cmake  devicePrograms.cu  input.txt  kernels.cu  kernels.cuh  main.cpp  optix7.h  (+5 more)
prebuild/obj_raytracer/obj_raytracer.dir/Release/obj_raytracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
utils/: arrayTest.txt  main.py  printIR.py  readme.md
(+140 files in other folders)
